apps/services/paperless-ngx/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: paperless
  labels:
    name: paperless
    app.kubernetes.io/name: paperless
    app.kubernetes.io/part-of: services
