apps/services/paperless-ngx/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-ngx
  namespace: paperless
  labels:
    app.kubernetes.io/name: paperless
    app.kubernetes.io/part-of: services
  annotations:
    configmap.reloader.stakater.com/reload: "paperless-config"
    secret.reloader.stakater.com/reload: "paperless-secret-key"
spec:
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: paperless
  template:
    metadata:
      labels:
        app: paperless
        app.kubernetes.io/name: paperless
    spec:
      priorityClassName: key-service
      securityContext:
        fsGroup: 33
      volumes:
        - name: paperless-pvc
          persistentVolumeClaim:
            claimName: paperless-pvc
        - name: paperless-data
          persistentVolumeClaim:
            claimName: paperless-data-rwo-v2
        - name: paperless-consume
          persistentVolumeClaim:
            claimName: paperless-consume-v2
      containers:
      - name: paperless
        image: ghcr.io/paperless-ngx/paperless-ngx:2.20.15
        resources:
          requests:
            cpu: 100m
            memory: 1024Mi
          limits:
            cpu: 1000m
            memory: 2048Mi
        ports:
          - name: http
            containerPort: 8000
        readinessProbe:
          tcpSocket:
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 10
        volumeMounts:
          - name: paperless-pvc
            mountPath: /usr/src/paperless/media
          - name: paperless-data
            mountPath: /usr/src/paperless/data
          - name: paperless-consume
            mountPath: /usr/src/paperless/consume
