apps/services/paperless-ngx/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless
  namespace: paperless
  annotations:
    app.kubernetes.io/name: lldap
spec:
  type: ClusterIP
  selector:
    app: paperless
  ports:
  - port: 80
    name: http
    targetPort: 8000
